--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset='utf-8'>
 		<title>Two Steps away from Bad Code</title>
-		<script src="elm_min.js"></script>>
+		<script src='elm_min.js'></script>>
 	</head>
 	<body>
-		<div id="elm-node"></div>
+		<div id='elm-node'></div>
 		<script>
 			var app = Elm.Main.init({
-				node: document.getElementById("elm-node")
-			})
+				node: document.getElementById('elm-node')
+			});
+
+			app.ports.loadedMesh.send('coming from js');
 		</script>
 	</body>
 </html>
