Communication between elm and function works in some ways :P

--- a/functions/test.html
+++ b/functions/test.html
@@ -14,11 +14,10 @@
 			});
 
 			function read_obj_file() {
-				a = {{title}}
-				return 'try hard';
+				return 'try hard 2';
 			}
 
 			app.ports.loadedMesh.send(read_obj_file());
-		</script>
+        </script>
 	</body>
 </html>
